--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,7 @@ ul.resumen-evento li{
     width: 25%;
   }
 }
+
 p.numero{
   color: #fe4918;
   font-size: 4em;
@@ -746,7 +747,7 @@ div.paquetes .tabla-precio input{
 }
 .contenido-dia{
   padding: 20px;
-  /*display: none;*/
+  display: none;
 }
 @media (min-width: 768px){
   .contenido-dia > div{
@@ -793,6 +794,25 @@ div.paquetes .tabla-precio input{
 .resumen input{
   display: block;
   margin: 10px auto;
+}
+#lista-productos{
+  background-color: #e1e1e1;
+  padding: 20px;
+  display: none;
+}
+#suma-total{
+  text-align: center;
+  font-size: 2em;
+  color: #fe4918;
+}
+input[disabled] .button{
+  opacity:.5;
+}
+#error{
+  clear: both;
+  padding: 20px;
+  text-align: center;
+  display: none;
 }
 
 
