--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,44 @@ ul{
     font-size: 1.2em;
     text-align: center;
 }
+/**Lettering**/
+h1.nombre-sitio span{
+  position: relative;
+  text-shadow: 0 0 30px black;
+}
+@media (min-width: 992px){
+  .char1{
+    top: 20px; right:20px;
+  }
+  .char2{
+    top: 0px; left: -20px;
+  }
+  .char3{
+    top:10px; right:20px;
+  }
+  .char4{
+    top:5px; right:10px;
+  }
+  .char5{
+    top:15px; right:10px;
+  }
+  .char6{
+    top:5px; left:10px;
+  }
+  .char7{
+    top:20px; left:-10px;
+  }
+  .char8{
+    top:0; left:10px;
+  }
+  .char9{
+    top: 10px; right:20px;
+  }
+  .char10{
+    top:20px; right:20px;
+  }
+}
+
 /**header**/
 div.hero{
     background-image: url(../img/encabezado.jpg);
@@ -263,6 +301,12 @@ div.barra{
     background-color: #353535;
     padding: 20px 0;
 }
+.fixed{
+  position: fixed;
+  width: 100%;
+  top: 0; left: 0;
+  z-index: 2;
+}
 div.logo{
     width: 80%;
     float: left;
@@ -278,6 +322,7 @@ div.logo img{
 /**Navegacion principal**/
 nav.navegacion-principal{
     display: none;
+    width: 100%;
 }
 nav.navegacion-principal a{
     font-family: 'Oswald', sans-serif;
@@ -306,12 +351,13 @@ nav.navegacion-principal a:last-child:hover{
         width: 67%;
         float: right;
         text-align: right;
-        display: block;
+        display: block!important;
     }
     nav.navegacion-principal a{
-        margin-right: 10px;
+        /* margin-right: 10px; */
         padding: 10px 10px;
         display: inline-block;
+        width: auto;
         
         display: inline;
         text-align: center;
@@ -723,6 +769,15 @@ p.copyright{
   text-align: center;
 }
 /***Internas ***/
+/**Conferencias**/
+body.conferencia .navegacion-principal .activo{
+  border-bottom: 2px solid #fe4918;
+}
+div.galeria a{
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
 /**Registro**/
 form.registro h3{
   text-align: center;
